--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-App Component!
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12 p-0">
+      <app-header></app-header>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-6 offset-3">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
