--- a/src/app/modules/header/component/header.component.html
+++ b/src/app/modules/header/component/header.component.html
@@ -14,9 +14,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link active" aria-current="page" routerLink="/"
+          >Kezdőlap</a
+        >
+        <a class="nav-link" routerLink="/signals">Signals</a>
       </div>
     </div>
   </div>
