--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-sm-8 offset-sm-2 my-4">
       <router-outlet></router-outlet>
     </div>
   </div>
