--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -1,6 +1,4 @@
-<div class="row">
-  <div class="column my-5">
-    <h1>Kezdőlap</h1>
-    <pre>{{ users | json }}</pre>
-  </div>
+<div class="home-container">
+  <h1>Kezdőlap</h1>
+  <pre>{{ users | json }}</pre>
 </div>
