--- a/src/app/modules/graphql/components/graphql/graphql.component.html
+++ b/src/app/modules/graphql/components/graphql/graphql.component.html
@@ -4,27 +4,79 @@
     <h3>Posztok</h3>
   </div>
 
-  <div class="d-flex justify-content-center mt-3" *ngIf="loading">
-    <div class="spinner-border text-primary" role="status">
-      <span class="visually-hidden">Loading...</span>
-    </div>
-  </div>
-
   <div class="error-container mt-3" *ngIf="error">
     <div class="alert alert-danger" role="alert">
       {{ error.message }}
     </div>
   </div>
 
+  <div class="row mt-3">
+    <form [formGroup]="postForm">
+      <div class="col-6 offset-3 p-4 mb-3" [ngClass]="createLoading ? 'create-post-loading' : 'border'">
+        <div class="mb-3">
+          <label for="title" class="form-label">Új post címe:</label>
+          <input type="text" class="form-control" id="title" formControlName="title" />
+        </div>
+        <div class="mb-3">
+          <label for="body" class="form-label">Új post tartalma:</label>
+          <textarea class="form-control" id="body" rows="3" formControlName="body"></textarea>
+        </div>
+
+        <div class="d-flex justify-content-center">
+          <button
+            class="btn btn-primary"
+            [ngClass]="postForm.invalid || createLoading || deleteLoading ? 'disabled' : ''"
+            (click)="createPost()"
+          >
+            Létrehozás
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+
+  <div class="d-flex justify-content-center flex-column mt-3" *ngIf="loading">
+    <div class="skeleton-line"></div>
+    <div class="skeleton-line"></div>
+    <div class="skeleton-line"></div>
+    <div class="skeleton-line"></div>
+    <div class="skeleton-line"></div>
+    <div class="skeleton-line"></div>
+    <div class="skeleton-line"></div>
+  </div>
+
   <div class="post-container mt-3" *ngIf="!error">
+    <div *ngIf="!posts.length">
+      <div class="alert alert-secondary text-center" role="alert">Nincsenek posztok!</div>
+    </div>
+
     <div *ngFor="let post of posts">
-      <div class="border border-secondary mb-3 p-2">
-        <div class="title">
-          <span class="fw-bold">Címe:</span> {{ post.title }}
+      <div class="border mb-3 p-2 post">
+        <div class="id">
+          <span class="fw-bold">Id: </span>
+          <span
+            class="post-id cursor-pointer text-decoration-underline"
+            tabindex="0"
+            (click)="onClickOnePost(post.id)"
+            (keyup.enter)="onClickOnePost(post.id)"
+          >
+            {{ post.id }}
+          </span>
         </div>
-        <div class="body">
-          <span class="fw-bold">Tartalma:</span> {{ post.body }}
-        </div>
+        <div class="title"><span class="fw-bold">Címe:</span> {{ post.title }}</div>
+        <div class="body"><span class="fw-bold">Tartalma:</span> {{ post.body }}</div>
+        <button
+          class="btn btn-sm btn-danger del-button"
+          (click)="onClickDeletePost(post.id)"
+          [disabled]="deleteLoading || createLoading"
+        >
+          <span *ngIf="!deleteLoading || (deleteLoading && currentPostId !== post.id)" class="fw-bold">X</span>
+          <span *ngIf="deleteLoading && currentPostId === post.id">
+            <div class="spinner-border spinner-border-sm" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </span>
+        </button>
       </div>
     </div>
   </div>
