Add GraphQL paging

--- a/src/app/modules/header/components/header/header.component.html
+++ b/src/app/modules/header/components/header/header.component.html
@@ -15,9 +15,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" routerLink="/"
-            >Kezdőlap</a
-          >
+          <a class="nav-link" aria-current="page" routerLink="/">Kezdőlap</a>
           <a class="nav-link" routerLink="/signals">Signals</a>
           <a class="nav-link" routerLink="/forms">Formok</a>
           <a class="nav-link" routerLink="/graphql">GraphQL</a>
