--- a/src/app/modules/forms/components/forms/forms.component.html
+++ b/src/app/modules/forms/components/forms/forms.component.html
@@ -29,4 +29,21 @@
       </select>
     </div>
   </div>
+
+  <div class="template-driven-form my-5">
+    <h3>Template driven form</h3>
+    <form #form="ngForm" (ngSubmit)="onSubmitTDF(form)">
+      <div>
+        <label for="tdf-name" class="form-label">Név</label>
+        <input type="text" id="tdf-name" name="name" class="form-control" required ngModel />
+      </div>
+      <div class="mt-3">
+        <label for="tdf-email" class="form-label">E-mail</label>
+        <input type="email" id="tdf-email" name="email" class="form-control" required ngModel />
+      </div>
+      <div class="mt-3">
+        <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Küldés</button>
+      </div>
+    </form>
+  </div>
 </div>
