--- a/src/app/modules/graphql/components/graphql/graphql.component.scss
+++ b/src/app/modules/graphql/components/graphql/graphql.component.scss
@@ -21,6 +21,12 @@
   right: 0;
 }
 
+.edit-button {
+  position: absolute;
+  top: 0;
+  right: 29px;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
