GraphQL: Bugfix, and the intelligent paging works

--- a/src/app/modules/graphql/components/graphql/graphql.component.html
+++ b/src/app/modules/graphql/components/graphql/graphql.component.html
@@ -41,6 +41,8 @@
     infiniteScroll
     [infiniteScrollDistance]="0.75"
     [infiniteScrollThrottle]="150"
+    [immediateCheck]="true"
+    [infiniteScrollDisabled]="!firstPageLoaded"
     (scrolled)="onScroll()"
   >
     <div *ngIf="!posts.length && !loading">
