Upgrade Bootstrap + Add ViewChild module with examples

--- a/src/app/modules/header/components/header/header.component.html
+++ b/src/app/modules/header/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header-container">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/">BaseAngularTasks</a>
       <button
@@ -19,6 +19,7 @@
           <a class="nav-link" routerLink="/signals">Signals</a>
           <a class="nav-link" routerLink="/forms">Formok</a>
           <a class="nav-link" routerLink="/graphql">GraphQL</a>
+          <a class="nav-link" routerLink="/viewchild">ViewChild</a>
         </div>
       </div>
     </div>
