--- a/src/app/modules/graphql/components/graphql/graphql.component.html
+++ b/src/app/modules/graphql/components/graphql/graphql.component.html
@@ -1,7 +1,7 @@
 <div class="graphql-container">
   <div class="d-flex justify-content-center flex-column align-items-center">
     <h1>GraphQL</h1>
-    <h3>Posztok</h3>
+    <h3>Posztok!</h3>
   </div>
 
   <div class="error-container mt-3" *ngIf="error">
